Add option for full-height and truncated secondary active style

--- a/docs/examples/templates/animated-suru.html
+++ b/docs/examples/templates/animated-suru.html
@@ -3,7 +3,7 @@ layout: examples
 title: Animated suru pattern
 category: _templates
 ---
-<header class="gn-container gn-1">
+<header class="gn-container gn-3 gn-animated-suru">
   <div class="gn-overlay"></div>
   <div class="gn-primary-nav">
     <div class="gn-primary-nav__row">
@@ -502,7 +502,7 @@ category: _templates
     </div>
   </div>
 </header>
-<div style="position:fixed;bottom:0;right:0.5rem;">
+<div class="gn-controls">
   <label class="js-small-switch">
     Small variant
     <input type="checkbox" class="p-switch">
@@ -515,6 +515,8 @@ category: _templates
     <option value="partners">Partners</option>
     <option value="careers">Careers</option>
   </select>
+  <p><a href="/examples/templates/canonical-nav">Demo sandbox</a></p>
+  <p><a href="/examples/templates/canonical-ubuntu-navs">Ubuntu interaction</a></p>
 </div>
 
 <script>
