--- a/docs/examples/templates/canonical-ubuntu-navs.html
+++ b/docs/examples/templates/canonical-ubuntu-navs.html
@@ -3,7 +3,7 @@ layout: examples
 title: Canonical and Ubuntu navs
 category: _templates
 ---
-<header class="gn-container gn-small gn-3 gn-orange-active gn-drop-in gn-hidden">
+<header class="gn-container gn-small gn-3 gn-orange-active gn-drop-in gn-hidden gn-full-height">
   <div class="gn-overlay"></div>
   <div class="gn-primary-nav">
     <div class="gn-primary-nav__row">
@@ -1108,12 +1108,15 @@ category: _templates
       <option value="gn-1">Iteration 1</option>
     </select>
   </div>
-  <label id="drop-in-toggle">
-    Drop in
-    <input type="checkbox" class="p-switch" checked="">
-    <div class="p-switch__slider"></div>
-  </label>
-</div>
+  <div>
+    <label id="drop-in-toggle">
+      Drop in
+      <input type="checkbox" class="p-switch" checked="">
+      <div class="p-switch__slider"></div>
+    </label>
+  </div>
+  <p><a href="/examples/templates/canonical-nav">Demo sandbox</a></p>
+  <p><a href="/examples/templates/animated-suru">Animated suru</a></p>
 </div>
 
 <script>
