fix map name conflict

--- a/scss/_settings_font.scss
+++ b/scss/_settings_font.scss
@@ -7,7 +7,7 @@ $font-allow-cyrillic-greek-latin: false !default;
 $increase-font-size-on-larger-screens: true !default;
 $font-size-ratio--largescreen: 1.125 !default;
 $font-size-largescreen: #{$font-size-ratio--largescreen}rem;
-$font-sizes: (
+$base-font-sizes: (
   base: 1rem,
   big: $font-size-largescreen
 ) !default;
