Clean up footer markup. Correct classes on index page.

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -254,8 +254,11 @@
             {{ content }}
           </div>
         </div>
-        <footer class="p-footer" role="contentinfo">
-          <div class="p-content__row u-no-margin--left">
+
+        <hr>
+
+        <footer class="p-strip is-shallow" role="contentinfo">
+          <div class="p-content__row">
             <div class="col-12">
               <p>&copy; 2019 Canonical Ltd. Ubuntu and Canonical are registered trademarks of Canonical Ltd.</p>
               <nav>
