Add local p-aside pattern

--- a/docs/sass/styles.scss
+++ b/docs/sass/styles.scss
@@ -6,6 +6,9 @@
 @import 'codehilite';
 @include codehilite;
 
+@import 'patterns_aside';
+@include vf-p-aside;
+
 /* Vanilla overrides */
 p {
   max-width: $p-max-width;
