rename grid vars to use same naming pattern

--- a/scss/_settings_grid.scss
+++ b/scss/_settings_grid.scss
@@ -8,8 +8,8 @@ $threshold-6-12-col: $breakpoint-medium !default;
 $grid-gutter-column-ratio: 1.61803398875 !default; // golden ratio
 $grid-column-prefix: 'col-' !default;
 $grid-small-col-prefix: '#{$grid-column-prefix}small-' !default;
-$grid-col-medium-prefix: '#{$grid-column-prefix}medium-' !default;
-$grid-desktop-col-prefix: #{$grid-column-prefix} !default;
+$grid-medium-col-prefix: '#{$grid-column-prefix}medium-' !default;
+$grid-big-col-prefix: #{$grid-column-prefix} !default;
 
 $grid-gutter-widths: (
   small: $sp-unit * 3,
