--- a/scss/_base_typography.scss
+++ b/scss/_base_typography.scss
@@ -31,7 +31,7 @@
       }
 
       @media screen and (min-width: $breakpoint-x-large) {
-        font-size: map-get($base-font-sizes, big);
+        font-size: map-get($base-font-sizes, large);
         //the rem value is not affected by the change in font-size; it needs to be multiplied by the ratio new font-size/default font-size
         line-height: map-get($line-heights, default-text) * $font-size-ratio--largescreen;
       }
