--- a/scss/_settings_font.scss
+++ b/scss/_settings_font.scss
@@ -9,6 +9,6 @@ $font-size-ratio--largescreen: 1.125 !default;
 $font-size-largescreen: #{$font-size-ratio--largescreen}rem;
 $base-font-sizes: (
   base: 1rem,
-  big: $font-size-largescreen
+  large: $font-size-largescreen
 ) !default;
 $font-weight-bold: 400 !default;
