--- a/scss/_settings_grid.scss
+++ b/scss/_settings_grid.scss
@@ -9,7 +9,7 @@ $grid-gutter-column-ratio: 1.61803398875 !default; // golden ratio
 $grid-column-prefix: 'col-' !default;
 $grid-small-col-prefix: '#{$grid-column-prefix}small-' !default;
 $grid-medium-col-prefix: '#{$grid-column-prefix}medium-' !default;
-$grid-big-col-prefix: #{$grid-column-prefix} !default;
+$grid-large-col-prefix: #{$grid-column-prefix} !default;
 
 $grid-gutter-widths: (
   small: $sp-unit * 3,
