--- a/scss/_patterns_grid.scss
+++ b/scss/_patterns_grid.scss
@@ -120,7 +120,7 @@
   // tablet grid
   @media (min-width: $threshold-4-6-col) and (max-width: $threshold-6-12-col) {
     @for $i from 1 through $grid-columns-medium {
-      .#{$grid-col-medium-prefix}#{$i} {
+      .#{$grid-medium-col-prefix}#{$i} {
         grid-column-end: span #{$i};
 
         //nesting
@@ -137,7 +137,7 @@
   @media (min-width: $threshold-6-12-col) {
     @for $i from $grid-columns through 1 {
       // set col-* to span respective number of columns on desktop
-      .#{$grid-desktop-col-prefix}#{$i} {
+      .#{$grid-large-col-prefix}#{$i} {
         grid-column-end: span #{$i};
 
         //nesting
@@ -160,7 +160,7 @@
   }
 
   @for $i from 1 through $grid-columns-medium {
-    .#{$grid-col-medium-prefix}#{$i} {
+    .#{$grid-medium-col-prefix}#{$i} {
       @extend %span-full-grid-on-mobile;
       @extend %span-full-grid-on-desktop;
       @extend %display-block;
@@ -168,7 +168,7 @@
   }
 
   @for $i from 1 through $grid-columns {
-    .#{$grid-desktop-col-prefix}#{$i} {
+    .#{$grid-large-col-prefix}#{$i} {
       @extend %span-full-grid-on-mobile;
       @extend %span-full-grid-on-tablet;
       @extend %display-block;
