--- a/scss/_settings_grid.scss
+++ b/scss/_settings_grid.scss
@@ -2,26 +2,26 @@
 $grid-columns: 12 !default;
 $grid-columns-small: 4 !default;
 $grid-columns-medium: 6 !default;
-$threshold-4-6-col: $breakpoint-small;
-$threshold-6-12-col: $breakpoint-medium;
+$threshold-4-6-col: $breakpoint-small !default;
+$threshold-6-12-col: $breakpoint-medium !default;
 
 $grid-gutter-column-ratio: 1.61803398875 !default; // golden ratio
-$grid-column-prefix: 'col-';
-$grid-small-col-prefix: '#{$grid-column-prefix}small-';
-$grid-col-medium-prefix: '#{$grid-column-prefix}medium-';
-$grid-desktop-col-prefix: #{$grid-column-prefix};
+$grid-column-prefix: 'col-' !default;
+$grid-small-col-prefix: '#{$grid-column-prefix}small-' !default;
+$grid-medium-col-prefix: '#{$grid-column-prefix}medium-' !default;
+$grid-large-col-prefix: #{$grid-column-prefix} !default;
 
 $grid-gutter-widths: (
   small: $sp-unit * 3,
   medium: $sp-unit * 4,
   large: $sp-unit * 5
-);
+) !default;
 
 $grid-margin-widths: (
   small: $sp-unit * 2,
   medium: $sp-unit * 3,
   large: $sp-unit * 3
-);
+) !default;
 
 $grid-margin-width: $sph-outer--large !default;
 $grid-max-width: 72rem !default;
