Remove all old refs to /en/

--- a/docs/examples/templates/vertical-spacing.html
+++ b/docs/examples/templates/vertical-spacing.html
@@ -124,7 +124,7 @@ category: _templates
         <li>Assign to physical zones</li>
       </ul>
       <p>
-        <a href="https://docs.ubuntu.com/maas/2.2/en/intro-concepts#node-actions">Learn more about the node actions</a>
+        <a href="https://docs.ubuntu.com/maas/2.2/intro-concepts#node-actions">Learn more about the node actions</a>
       </p>
     </div>
     <div class="col-6 p-divider__block">
